fixed margins and spacing for calculate button

--- a/climbing-style-sheet.css
+++ b/climbing-style-sheet.css
@@ -4,6 +4,11 @@ body {
     padding-bottom: 40px;
   }
 
+  #calc-div {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
   /* Custom container */
   .container-narrow {
     margin: 0 auto;
